--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -414,6 +414,8 @@ legend {
   align-items: center;
   justify-content: center;
   row-gap: 10px;
+  overflow: hidden;
+  transition: opacity ease-in 0.5s;
 }
 @media (max-width: 920px) {
   .quotes {
